--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -1,18 +1,27 @@
-.main-container{
+.main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.search-container{
+
+.main-container-loaded {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.search-container {
   width: 50%;
-  padding-top:10%;
+  padding-top: 10%;
   justify-content: center;
   align-content: center;
   align-items: center;
-  .screen-logo{
-    width:50%;
-    height:27%;
+
+  .screen-logo {
+    width: 50%;
+    height: 27%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -20,17 +29,21 @@
     justify-content: center;
     flex-flow: row wrap;
     align-content: flex-end;
-    .logo-svg{
-      width: 100%;}
+
+    .logo-svg {
+      width: 100%;
+    }
   }
-  .logo-container{
-    width:100%;
-    height:27%;
-    margin:0 auto;
+
+  .logo-container {
+    width: 100%;
+    height: 27%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    .logo-svg g.logo-text path{
+
+    .logo-svg g.logo-text path {
       stroke: #000;
       fill: #ffffff;
       fill-rule: evenodd;
@@ -38,15 +51,16 @@
       stroke-width: 0.8;
       stroke-dasharray: 800;
       stroke-dashoffset: 800;
-      -moz-animation:logoFill 4s ease-in-out 1s forwards;
-      -webkit-animation:logoFill 4s ease-in-out 1s forwards;
-      animation:logoFill 4s ease-in-out 1s forwards;
+      -moz-animation: logoFill 4s ease-in-out 1s forwards;
+      -webkit-animation: logoFill 4s ease-in-out 1s forwards;
+      animation: logoFill 4s ease-in-out 1s forwards;
     }
   }
 }
-.search-container-loaded{
+
+.search-container-loaded {
   display: flex;
-  width:100%;
+  width: 100%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -54,33 +68,39 @@
   padding-bottom: 50px;
   border-bottom: 2px solid #f3f3f3;
 }
-.logo-text.hide{
+
+.logo-text.hide {
   display: none;
 }
-.screen-logo-loaded{
+
+.screen-logo-loaded {
   display: block;
-  width:13%;
+  width: 13%;
   flex-grow: 0;
   flex-shrink: 1;
   flex-basis: auto;
   align-self: auto;
   order: 0;
-  .logo-svg{
+
+  .logo-svg {
     width: 100%;
   }
-  .logo-container{
-    width:100%;
-    height:27%;
-    margin:0 auto;
+
+  .logo-container {
+    width: 100%;
+    height: 27%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 }
+
 .main-image {
   width: 100%;
   height: 100%;
 }
+
 .z1asCe {
   display: inline-block;
   fill: currentColor;
@@ -89,11 +109,13 @@
   position: relative;
   width: 24px;
 }
-.list-videos{
+
+.list-videos {
   padding-left: 12px;
   padding-top: 12px;
   padding-right: 12px;
 }
+
 .right-arrow {
   cursor: pointer;
   align-self: center;
@@ -101,11 +123,12 @@
   flex-shrink: 1;
   flex-basis: auto;
   order: 0;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
   display: flex;
   justify-content: center;
-  .arrow{
+
+  .arrow {
     align-self: center;
     border-left: 1px solid #dfe1e5;
     //margin-top: 4px;
@@ -113,6 +136,7 @@
       margin: auto;
       color: #9aa0a6;
       padding: 0 10px 0;
+
       .wFncld {
         margin-top: 10px;
         color: #9aa0a6;
@@ -122,13 +146,16 @@
     }
   }
 }
+
 .svg-magnifier {
   color: #9aa0a6;
 
 }
+
 .non-display {
   display: none;
 }
+
 .search-query-parent {
   position: relative;
   background: #fff;
@@ -139,75 +166,87 @@
   margin: 3% auto 0;
 
 }
-.search-query-parent-loaded{
+
+.search-query-parent-loaded {
   //position: relative;
   display: flex;
   background: #fff;
-  width:80%;
+  width: 80%;
   box-shadow: none;
-  margin-top:3%;
+  margin-top: 3%;
   flex-grow: 0;
   flex-shrink: 1;
   flex-basis: auto;
   align-self: auto;
   order: 0;
-  .search-box-container{
-    width:55%;
+
+  .search-box-container {
+    width: 55%;
   }
 }
-.category-container{
+
+.category-container {
   display: flex;
   position: absolute;
   z-index: -1;
   width: 100%;
   justify-content: center;
-  margin-top:80px;
-  div[class^="ct-"]{
-    padding:5px;
-    font-size:20px;
+  margin-top: 80px;
+
+  div[class^="ct-"] {
+    padding: 5px;
+    font-size: 20px;
     font-weight: 700;
     display: flex;
     flex-direction: row;
     align-content: center;
     align-items: center;
-    border-radius:3px;
-    margin-right:5px;
+    border-radius: 3px;
+    margin-right: 5px;
     cursor: pointer;
     pointer-events: auto;
   }
-  div[class^="icon-"],.label{
+
+  div[class^="icon-"], .label {
     pointer-events: none;
   }
-  .icon-checkbox-unchecked,.icon-checkbox-checked{
-    padding:5px;
+
+  .icon-checkbox-unchecked, .icon-checkbox-checked {
+    padding: 5px;
   }
+
   .icon-youtube,
   .icon-movie,
   .icon-education,
   .icon-music,
-  .icon-adult{
+  .icon-adult {
     display: none;
   }
-  &#loaded{
+
+  &#loaded {
     z-index: 1;
     justify-content: flex-start;
   }
-  div[class$="-checked"] div[class^="icon-"]{
+
+  div[class$="-checked"] div[class^="icon-"] {
     display: block;
   }
-  div[class^="ct-"][class$="-checked"]{
-    color:#fff;
+
+  div[class^="ct-"][class$="-checked"] {
+    color: #fff;
     background: #000;
     -webkit-animation: jello-horizontal 0.5s linear;
     animation: jello-horizontal 0.5s linear;
     animation-fill-mode: forwards;
   }
-  div[class^="ct-"][class$="-unchecked"]{
+
+  div[class^="ct-"][class$="-unchecked"] {
     -webkit-animation: jello-vertical 0.5s both;
     animation: jello-vertical 0.5s both;
   }
 }
-.search-box-container{
+
+.search-box-container {
   position: relative;
   width: 100%;
   border: 1px solid #dfe1e5;
@@ -218,37 +257,42 @@
   justify-content: center;
   align-items: flex-start;
   align-content: flex-start;
-  &:hover{
+
+  &:hover {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
   }
+
   &:focus-within {
     box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.2);
 
   }
+
   .search-query {
-    height:60px;
-    font-size:20px;
-    border:none;
+    height: 60px;
+    font-size: 20px;
+    border: none;
     display: block;
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: auto;
     order: 0;
-    width:87%;
+    width: 87%;
     z-index: 3;
-    &:focus{
+
+    &:focus {
       border: none;
       outline: none;
     }
 
   }
+
   .suggestion-parent,
   .suggestion-parent-loaded {
-    background:#fff;
+    background: #fff;
     position: absolute;
-    top:100%;
-    left:0;
+    top: 100%;
+    left: 0;
     border-bottom-right-radius: 24px;
     border-bottom-left-radius: 24px;
     display: flex;
@@ -258,8 +302,8 @@
     flex-basis: auto;
     align-self: auto;
     order: 0;
-    width:100%;
-    border:1px solid #dfe1e5;
+    width: 100%;
+    border: 1px solid #dfe1e5;
     z-index: 2;
     box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.2);
 
@@ -271,20 +315,23 @@
       border-radius: 2px;
       transition-duration: .3s;
       min-height: 20px;
+
       .suggestion-text {
         align-self: center;
       }
 
-      &:last-child{
+      &:last-child {
         border-bottom-right-radius: 24px;
         border-bottom-left-radius: 24px;
       }
+
       &:hover {
         background-color: #ebedee;
       }
     }
   }
-  .magnify{
+
+  .magnify {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -293,10 +340,11 @@
     flex-basis: auto;
     align-self: center;
     order: 0;
-    width:7%;
-    height:3%;
+    width: 7%;
+    height: 3%;
   }
-  .suggestion-magnify{
+
+  .suggestion-magnify {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -307,11 +355,13 @@
     order: 0;
     width: 8%;
     height: 64px;
+
     .hsuHs {
       color: #9aa0a6;
-      align-self:center;
+      align-self: center;
     }
   }
+
   .loader {
     border: 16px solid #ffffff;
     border-radius: 50%;
@@ -324,6 +374,7 @@
     animation: spin 2s linear infinite;
   }
 }
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -373,6 +424,7 @@
     transform: scale3d(1, 1, 1);
   }
 }
+
 @keyframes jello-vertical {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
@@ -406,68 +458,96 @@
 
 //Keyframes for logo
 @keyframes logoFill {
-  0%  {stroke-dashoffset:800;}
-  80%  {stroke-dashoffset:0;}
-  100%{stroke-dashoffset:0;}
+  0% {
+    stroke-dashoffset: 800;
+  }
+  80% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
 
 }
-@-webkit-keyframes logoFill{
-  0%  {stroke-dashoffset:800;}
-  80%  {stroke-dashoffset:0;fill-opacity:0;}
-  100%{stroke-dashoffset:0;fill-opacity:1;}
-}
-@-moz-keyframes logoFill{
-  0%  {stroke-dashoffset:800;}
-  80%  {stroke-dashoffset:0;fill-opacity:0;}
-  100%{stroke-dashoffset:0;fill-opacity:1;}
+
+@-webkit-keyframes logoFill {
+  0% {
+    stroke-dashoffset: 800;
+  }
+  80% {
+    stroke-dashoffset: 0;
+    fill-opacity: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill-opacity: 1;
+  }
 }
 
-.search-query-parent-loaded:nth-child(2){
+@-moz-keyframes logoFill {
+  0% {
+    stroke-dashoffset: 800;
+  }
+  80% {
+    stroke-dashoffset: 0;
+    fill-opacity: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill-opacity: 1;
+  }
+}
+
+.search-query-parent-loaded:nth-child(2) {
   justify-content: end;
 }
+
 /* Responsive Design*/
 .logo-black {
-  fill:#000000;
+  fill: #000000;
 }
-.logo-eyes{
+
+.logo-eyes {
   opacity: 1;
-  fill:#000000;
+  fill: #000000;
   animation: blink 5s infinite;
   animation-timing-function: step-end;
 }
+
 .logo-white {
-  fill:#ffffff
+  fill: #ffffff
 }
+
 @keyframes blink {
-  5%{
-    fill:#fff;
+  5% {
+    fill: #fff;
   }
-  10%{
-    fill:#000;
+  10% {
+    fill: #000;
   }
-  15%{
-    fill:#fff;
+  15% {
+    fill: #fff;
   }
-  20%{
-    fill:#000;
+  20% {
+    fill: #000;
   }
-  25%{
-    fill:#fff;
+  25% {
+    fill: #fff;
   }
-  30%{
-    fill:#000;
+  30% {
+    fill: #000;
   }
-  35%{
-    fill:#000;
+  35% {
+    fill: #000;
   }
-  55%{
-    fill:#fff;
+  55% {
+    fill: #fff;
   }
-  60%{
-    fill:#000000;
+  60% {
+    fill: #000000;
   }
 
-  90%{
-    fill:#000000;
+  90% {
+    fill: #000000;
   }
 }
