sidebar menu created

--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -229,7 +229,7 @@ $adultColor: #c500d4;
   flex-grow: 0;
   flex-shrink: 1;
   flex-basis: auto;
-  align-self: auto;
+  align-self: center;
   order: 0;
 
   .search-box-container {
