--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -3,11 +3,19 @@ $movieColor: #ef4f00;
 $educationalColor: #22c100;
 $musicColor: #006ae2;
 $adultColor: #c500d4;
+html,body{
+  height:100%;
+}
+div#root{
+  height:fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .main-container-loaded {
@@ -62,7 +70,7 @@ $adultColor: #c500d4;
 
 
 .search-container {
-  width: 50%;
+  width: 53%;
   padding-top: 10%;
   justify-content: center;
   align-content: center;
@@ -174,17 +182,15 @@ $adultColor: #c500d4;
   align-self: center;
   flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: auto;
+  flex-basis: 48px;
   order: 0;
-  width: 5%;
-  height: 3%;
   display: flex;
   justify-content: center;
 
   .arrow {
     align-self: center;
     border-left: 1px solid #dfe1e5;
-    //margin-top: 4px;
+    z-index: 3;
     .hsuHs-arrow {
       margin: auto;
       color: #9aa0a6;
@@ -210,12 +216,14 @@ $adultColor: #c500d4;
 }
 
 .search-query-parent {
-  position: relative;
+  //position: relative;
   background: #fff;
   display: flex;
   flex-wrap: wrap;
   box-shadow: none;
   width: 100%;
+  height:64px;
+
   margin: 3% auto 0;
 
 }
@@ -239,15 +247,16 @@ $adultColor: #c500d4;
 
 .filtering-type {
   display: flex;
-  position: absolute;
-  z-index: -1;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 1;
   width: 100%;
   justify-content: center;
-  margin-top: 80px;
+  margin-top: 20px;
 
   div[class^="ct-"] {
     padding: 5px;
-    font-size: 20px;
+    //font-size: 20px;
     font-weight: 700;
     display: flex;
     flex-direction: row;
@@ -324,12 +333,12 @@ $adultColor: #c500d4;
     font-size: 20px;
     border: none;
     display: block;
-    flex-grow: 0;
+    flex-grow: 2;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: auto;
     order: 0;
-    width: 87%;
+    border-radius:30px;
     z-index: 3;
 
     &:focus {
@@ -345,8 +354,8 @@ $adultColor: #c500d4;
     position: absolute;
     top: 100%;
     left: 0;
-    border-bottom-right-radius: 24px;
-    border-bottom-left-radius: 24px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
     display: flex;
     flex-direction: column;
     flex-grow: 0;
@@ -355,9 +364,8 @@ $adultColor: #c500d4;
     align-self: auto;
     order: 0;
     width: 100%;
-    border: 1px solid #dfe1e5;
     z-index: 2;
-    box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 7px 8px rgba(0, 0, 0, 0.2);
 
     .suggestion-option {
       cursor: pointer;
@@ -384,16 +392,16 @@ $adultColor: #c500d4;
   }
 
   .magnify {
+    color: #b2b2b2;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-grow: 0;
     flex-shrink: 1;
-    flex-basis: auto;
+    flex-basis: 48px;
     align-self: center;
     order: 0;
-    width: 7%;
-    height: 3%;
+
   }
 
   .suggestion-magnify {
@@ -607,6 +615,16 @@ $adultColor: #c500d4;
 /* Responsive Design */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  .search-container{
+    width:100%;
+    padding-top:30%;
+    .screen-logo{
+      width:70%;
+    }
+    .filtering-type{
+      font-size: 8px;
+    }
+  }
   .list-videos {
     display: flex;
     flex-direction: column-reverse;
