--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -38,17 +38,14 @@ div#root{
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px 0 20px 0;
+      padding: 20px 5px 20px 5px;
       cursor: pointer;
     &:hover{
-      background: #f3f3f3;
       color: #000000;
-      border-left:2px solid #ccc;
       animation: jello-horizontal 0.5s linear;
 
     }
       &:first-child{
-        background: #dbdbdb;
         div.icon-youtube{
           color: #000000;
         }
@@ -56,12 +53,13 @@ div#root{
 }
     div[class^="icon-"] {
     font-size:20px;
-      //pointer-events: none;
+      pointer-events: none;
       color:#828282;
       padding-bottom:6px;
       transition: all 700ms;
     }
     div.label{
+      pointer-events: none;
       font-family:Arial;
       font-size:13px;
     }
@@ -118,13 +116,15 @@ div#root{
 .search-container-loaded {
   display: flex;
   width: 100%;
-  margin-top: 3%;
+  height:70px;
+  margin-top: 2%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   border-bottom: 2px solid #f3f3f3;
-  padding-bottom:20px;
+  //padding-bottom:20px;
   .search-box-container{
+    max-height:50px;
   }
 }
 
@@ -133,26 +133,27 @@ div#root{
 }
 
 .screen-logo-loaded {
-  display: block;
-  width: 13%;
-  height:64px;
+  display: flex;
   flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-self: auto;
-  order: 0;
+  flex-basis: 100px;
+  //width: 163px;
+  //height: 64px;
+  //flex-grow: 0;
+  //flex-shrink: 1;
+  //flex-basis: auto;
+  //align-self: auto;
+  //order: 0;
 
   .logo-svg {
     width: 100%;
+    //margin: 0 auto;
+    //display: block;
   }
 
   .logo-container {
-    width: 100%;
-    height: 27%;
-    margin: 0 auto;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    //align-items: center;
+    //height: 100%;
   }
 }
 
@@ -172,9 +173,9 @@ div#root{
 
 .list-videos {
   display: flex;
-  padding-left: 12px;
-  padding-top: 12px;
-  padding-right: 12px;
+  //padding-left: 12px;
+  //padding-top: 12px;
+  //padding-right: 12px;
 }
 
 .right-arrow {
@@ -230,18 +231,12 @@ div#root{
 
 .search-query-parent-loaded {
   display: flex;
-  background: #fff;
-  width: 80%;
-  height:64px;
-  box-shadow: none;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-self: center;
-  order: 0;
+  flex-grow: 2;
+  align-self: flex-start;
 
   .search-box-container {
     width: 55%;
+    max-height:50px;
   }
 }
 
@@ -281,6 +276,7 @@ div#root{
   .icon-education,
   .icon-music,
   .icon-adult {
+    padding:0 10px 0 10px;
     display: none;
   }
 
@@ -310,6 +306,7 @@ div#root{
 .search-box-container {
   position: relative;
   width: 100%;
+  height: 50px;
   border: 1px solid #dfe1e5;
   border-radius: 30px;
   display: flex;
@@ -318,6 +315,7 @@ div#root{
   justify-content: center;
   align-items: flex-start;
   align-content: flex-start;
+  align-self: center;
 
   &:hover {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
@@ -329,7 +327,7 @@ div#root{
   }
 
   .search-query {
-    height: 60px;
+    height: 100%;
     font-size: 20px;
     border: none;
     display: block;
@@ -340,6 +338,7 @@ div#root{
     order: 0;
     border-radius:30px;
     z-index: 3;
+    height: 100%;
 
     &:focus {
       border: none;
@@ -365,7 +364,7 @@ div#root{
     order: 0;
     width: 100%;
     z-index: 2;
-    box-shadow: 0px 7px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 7px 8px rgba(0, 0, 0, 0.2);
 
     .suggestion-option {
       cursor: pointer;
@@ -375,6 +374,9 @@ div#root{
       border-radius: 2px;
       transition-duration: .3s;
       min-height: 20px;
+      &:first-child{
+        border-top:1px solid #ccc;
+      }
 
       .suggestion-text {
         align-self: center;
@@ -614,8 +616,14 @@ div#root{
 
 /* Responsive Design */
 /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px){
+  .screen-logo-loaded{
+    display: none;
+  }
+}
 @media only screen and (max-width: 600px) {
   .search-container{
+
     width:100%;
     padding-top:30%;
     .screen-logo{
@@ -623,6 +631,14 @@ div#root{
     }
     .filtering-type{
       font-size: 8px;
+    }
+  }
+  .search-container-loaded{
+    .search-box-container{
+      width:100%;
+      //.search-query{
+      //  height:25vh;
+      //}
     }
   }
   .list-videos {
@@ -634,12 +650,16 @@ div#root{
       display: flex;
       flex-direction: row;
       justify-content: space-around;
-      padding-right: 8px;
+      padding-right: 0;
       z-index: 22;
       left: 0;
       bottom: 0;
       background: #fff;
-      height: 100%;
+      height:60px;
+      align-items: center;
+      div.label{
+        display: none;
+      }
       div[class^="ct-"]{
         padding: 10px 0 10px 0;
       }
@@ -659,4 +679,8 @@ div#root{
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+  //.search-box-container{
+  //  width:57%;
+  //}
+}
