--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -1,17 +1,19 @@
-$youtubeColor:#EE1B0D;
+$youtubeColor: #EE1B0D;
 $movieColor: #ef4f00;
 $educationalColor: #22c100;
 $musicColor: #006ae2;
 $adultColor: #c500d4;
-html,body{
-  height:100%;
+html, body {
+  height: 100%;
 }
-div#root{
-  height:fit-content;
+
+div#root {
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -23,45 +25,61 @@ div#root{
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  .filtering-type-loaded{
+
+  .filtering-type-loaded {
     position: sticky;
-    padding-right:8px;
+    padding-right: 8px;
     z-index: 22;
     left: 0;
     top: 0;
     background: #fff;
     height: 100%;
-    div[class^="ct-"]{
+
+    div[class^="ct-"][class$="-checked"] {
+      div[class^="icon-"] {
+        color: #000000;
+      }
+
+      background-color: #eee;
+    }
+
+    div[class^="ct-"] {
       pointer-events: auto;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 20px 5px 20px 5px;
       cursor: pointer;
-    &:hover{
-      color: #000000;
-      animation: jello-horizontal 0.5s linear;
 
-    }
-      &:first-child{
-        div.icon-youtube{
+      &:hover {
+        color: #000000;
+        background-color: #eee;
+        //animation: jello-horizontal 0.5s linear;
+
+      }
+
+      &:first-child {
+        div.icon-youtube {
           color: #000000;
         }
       }
-}
+    }
+
     div[class^="icon-"] {
-    font-size:20px;
+      font-size: 20px;
       pointer-events: none;
-      color:#828282;
-      padding-bottom:6px;
+      color: #828282;
+      padding-bottom: 6px;
       transition: all 700ms;
     }
-    div.label{
+
+    div.label {
       pointer-events: none;
-      font-family:Arial;
-      font-size:13px;
+      font-family: Arial;
+      font-size: 13px;
     }
   }
+
 }
 
 
@@ -114,14 +132,15 @@ div#root{
 .search-container-loaded {
   display: flex;
   width: 100%;
-  height:70px;
+  height: 70px;
   margin-top: 2%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   border-bottom: 2px solid #f3f3f3;
-  .search-box-container{
-    max-height:50px;
+
+  .search-box-container {
+    max-height: 50px;
   }
 }
 
@@ -160,9 +179,15 @@ div#root{
 .list-videos {
   display: flex;
 }
-.list-videos-container{
+
+.list-videos-container {
   padding: 20px;
+  background-color: #eee;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
 }
+
 .right-arrow {
   cursor: pointer;
   align-self: center;
@@ -177,6 +202,7 @@ div#root{
     align-self: center;
     border-left: 1px solid #dfe1e5;
     z-index: 3;
+
     .hsuHs-arrow {
       margin: auto;
       color: #9aa0a6;
@@ -207,7 +233,7 @@ div#root{
   flex-wrap: wrap;
   box-shadow: none;
   width: 100%;
-  height:64px;
+  height: 64px;
 
   margin: 3% auto 0;
 
@@ -220,7 +246,7 @@ div#root{
 
   .search-box-container {
     width: 55%;
-    max-height:50px;
+    max-height: 50px;
   }
 }
 
@@ -259,7 +285,7 @@ div#root{
   .icon-education,
   .icon-music,
   .icon-adult {
-    padding:0 10px 0 10px;
+    padding: 0 10px 0 10px;
     display: none;
   }
 
@@ -319,7 +345,7 @@ div#root{
     flex-basis: auto;
     align-self: auto;
     order: 0;
-    border-radius:30px;
+    border-radius: 30px;
     z-index: 3;
     height: 100%;
 
@@ -357,8 +383,9 @@ div#root{
       border-radius: 2px;
       transition-duration: .3s;
       min-height: 20px;
-      &:first-child{
-        border-top:1px solid #ccc;
+
+      &:first-child {
+        border-top: 1px solid #ccc;
       }
 
       .suggestion-text {
@@ -599,26 +626,29 @@ div#root{
 
 /* Responsive Design */
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px){
-  .screen-logo-loaded{
+@media only screen and (max-width: 600px) {
+  .screen-logo-loaded {
     display: none;
   }
 }
-@media only screen and (max-width: 600px) {
-  .search-container{
 
-    width:100%;
-    padding-top:30%;
-    .screen-logo{
-      width:70%;
+@media only screen and (max-width: 600px) {
+  .search-container {
+
+    width: 100%;
+    padding-top: 30%;
+
+    .screen-logo {
+      width: 70%;
     }
-    .filtering-type{
+
+    .filtering-type {
       font-size: 8px;
     }
   }
-  .search-container-loaded{
-    .search-box-container{
-      width:100%;
+  .search-container-loaded {
+    .search-box-container {
+      width: 100%;
     }
   }
   .list-videos {
@@ -635,17 +665,20 @@ div#root{
       left: 0;
       bottom: 0;
       background: #fff;
-      height:60px;
+      height: 60px;
       align-items: center;
-      div.label{
+
+      div.label {
         display: none;
       }
-      div[class^="ct-"]{
+
+      div[class^="ct-"] {
         padding: 10px 0 10px 0;
       }
     }
   }
 }
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
 }
