--- a/src/assets/css/single_music.scss
+++ b/src/assets/css/single_music.scss
@@ -21,58 +21,67 @@
       border-radius: 50%;
       object-fit: cover;
     }
+    div[class^="icon-"]{
+      font-size: 3vw;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      color: #fff;
+      pointer-events: none;
+    }
   }
   .sm-player{
     display: flex;
     width: 50%;
     align-items: center;
+    //border-radius: 24px;
     .sm-player-progress{
       width: 100%;
-      height: 5px;
-      border-radius: 7px;
+      height: 30px;
+      border-radius: 5px;
       background-color: #ccc;
       position: relative;
       .loaded{
+        border-radius: 5px;
         background-color: #838383;
         position: absolute;
         height:100%;
       }
       .played{
-        background-color: #006ae2;
+        border-radius: 5px;
+        background-color: #000000;
         position: absolute;
         height:100%;
       }
     }
-  }
-  .seek{
-    -webkit-appearance: none;
-    appearance: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-
-    &::-webkit-slider-thumb {
+    .seek{
+      border-radius: 5px;
       -webkit-appearance: none;
       appearance: none;
-      width: 10px;
-      height: 10px;
-      background: #4CAF50;
-      cursor: pointer;
-    }
-    &::-moz-range-thumb {
-      width: 10px;
-      height: 10px;
-      background: #4CAF50;
-      cursor: pointer;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 10px;
+        height: 35px;
+        background: #000;
+        cursor: pointer;
+        border-radius: 20px;
+      }
+      &::-moz-range-thumb {
+        width: 10px;
+        height: 35px;
+        background: #000;
+        cursor: pointer;
+      }
     }
   }
-}
-div[class^="icon-"]{
-  color: #000;
-  font-size: 4vw;
 }
