--- a/src/assets/css/single_music.scss
+++ b/src/assets/css/single_music.scss
@@ -1,44 +1,78 @@
 .sm-parent {
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  flex-direction: column;
+  align-self: center;
   margin-bottom: 2%;
   border-bottom: 2px solid #bebebe;
   box-shadow: 0 1px 9px #b4b4b4;
-  align-items: center;
-  .sm-thumbnail {
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    width:10%;
-    border-radius: 50%;
+  //align-items: center;
+  .sm-song{
     display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: row;
     align-items: center;
-    .sm-thumbnail-image {
-      display: block;
-      height: 100%;
-      width: 100%;
+    justify-content: space-between;
+    .sm-thumbnail {
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+      padding:10px;
       border-radius: 50%;
-      object-fit: cover;
+      display: flex;
+      align-items: center;
+      flex-basis: 10%;
+      .sm-thumbnail-image {
+        display: block;
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      div[class^="icon-"]{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        color: #fff;
+        pointer-events: none;
+        -webkit-font-smoothing: antialiased;
+        font-size: 32px;
+      }
     }
-    div[class^="icon-"]{
-      font-size: 3vw;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      color: #fff;
-      pointer-events: none;
-    }
+    .sm-details{
+      display: flex;
+      flex: 1;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-around;
+      align-items: center;
+      .sm-name{
+
+      }
+      .sm-artist{
+        color: #ccc;
+      }
+      .sm-download-links{
+        -webkit-font-smoothing: antialiased;
+        font-size:32px;
+      }
+  }
   }
   .sm-player{
-    display: flex;
-    width: 50%;
+    display: inline-flex;
     align-items: center;
-    //border-radius: 24px;
+    .sm-player-controls{
+    }
+    .sm-player-elapsed{
+    }
+    .sm-player-duration{
+    }
+    .sm-player-volume{
+    }
     .sm-player-progress{
-      width: 100%;
-      height: 30px;
+      flex-basis: 74%;
+      height: 4px;
       border-radius: 5px;
       background-color: #ccc;
       position: relative;
@@ -46,17 +80,21 @@
         border-radius: 5px;
         background-color: #838383;
         position: absolute;
+        top: 0;
+        left: 0;
         height:100%;
       }
       .played{
         border-radius: 5px;
         background-color: #000000;
         position: absolute;
+        top: 0;
+        left: 0;
         height:100%;
       }
     }
     .seek{
-      border-radius: 5px;
+      //border-radius: 5px;
       -webkit-appearance: none;
       appearance: none;
       position: absolute;
@@ -66,22 +104,26 @@
       opacity: 0.7;
       -webkit-transition: .2s;
       transition: opacity .2s;
-
       &::-webkit-slider-thumb {
         -webkit-appearance: none;
         appearance: none;
-        width: 10px;
-        height: 35px;
+        width: 16px;
+        height: 16px;
         background: #000;
         cursor: pointer;
-        border-radius: 20px;
+        border-radius: 8px;
       }
       &::-moz-range-thumb {
-        width: 10px;
-        height: 35px;
+        -webkit-appearance: none;
+        appearance: none;
+        width: 16px;
+        height: 16px;
         background: #000;
         cursor: pointer;
+        border-radius: 8px;
       }
     }
   }
+
 }
+
