--- a/src/assets/css/single_video.scss
+++ b/src/assets/css/single_video.scss
@@ -6,18 +6,18 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "myFont",serif;
+  font-family: "myFont", serif;
 }
-.list-videos{
-  width:100%;
+
+.list-videos {
+  width: 100%;
 }
+
 .sv-parent {
   display: flex;
   flex-direction: row;
   width: 100%;
   margin-bottom: 2%;
-  border-bottom: 2px solid #bebebe;
-  box-shadow: 0 1px 9px #b4b4b4;
 }
 
 .sv-metadata-line {
@@ -37,10 +37,10 @@
 }
 
 .sv-thumbnail-image {
-display: block;
+  display: block;
   margin: 0 auto;
   width: 50%;
-  height:90%;
+  height: 90%;
   box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.68);
   position: relative;
   z-index: 2;
@@ -60,16 +60,18 @@ display: block;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  width:20%;
+  width: 20%;
   display: flex;
   align-items: center;
   //margin:2%;
 }
+
 .sv-detail {
   display: flex;
   flex-direction: column;
   margin-left: 2vh;
   width: 70%;
+  padding-right: 10px;
   justify-content: center;
 }
 
@@ -175,6 +177,7 @@ display: block;
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);
   padding: 10px 20px 10px 20px;
   cursor: pointer;
+  min-width: 14vw;
 
 }
 
@@ -197,6 +200,8 @@ display: block;
   border: 1px solid #dfe1e5;
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);
   padding: 10px;
+  margin-top: 10px;
+  min-width: 15vw;
 }
 
 .sv-dropdown-svg {
@@ -234,12 +239,13 @@ display: block;
 }
 
 .sv-download-link {
-  width:15%;
+  width: 15%;
+  padding-right: 10px;
 
 }
 
 .sv-modal-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(4, 10, 30, .8);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -261,11 +267,44 @@ display: block;
 }
 
 .sv-modal-close-button {
+  background: #606061;
+  color: #FFFFFF;
+  line-height: 25px;
   position: absolute;
-  top: 0;
-  right: 0;
-  padding: 10px 10px 0 0;
-  font-weight: 700;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  // border radius
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  // box-shadow
+  box-shadow: 0 0 10px #000; // Opera, FFX4
+  -moz-box-shadow: 0 0 10px #000; // FFX3.5
+  -webkit-box-shadow: 0 0 10px #000; // Safari/Chrome/WebKit
+
+  // transition
+  -moz-transition: all .5s ease-out;
+  -webkit-transition: all .5s ease-out;
+  -o-transition: all .5s ease-out;
+
+  // transition delay
+  -webkit-transition-delay: .2s;
+  -moz-transition-delay: .2s;
+  -o-transition-delay: .2s;
+  -transition-delay: .2s;
+
+  &:hover {
+    background: #00d9ff;
+    -moz-transition: all .5s ease-out;
+    -webkit-transition: all .5s ease-out;
+    -o-transition: all .5s ease-out;
+  }
+
+
   cursor: pointer;
 }
 
@@ -277,9 +316,19 @@ display: block;
   background-color: rgba(255, 255, 255, 1);
   transform: translate(-50%, -50%);
   z-index: 5;
-  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
-  font-family: "myFont",serif;
+  font-family: "myFont", serif;
+  padding: 5px 20px 13px 20px;
+
+  //border radius
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  //box-shadow
+  box-shadow: 0 0 10px #000; // Opera, FFX4
+  -moz-box-shadow: 0 0 10px #000; // FFX3.5
+  -webkit-box-shadow: 0 0 10px #000; // Safari/Chrome/WebKit
+
+
 }
 
 .sv-modal-head {
@@ -337,6 +386,10 @@ display: block;
   width: 100%;
 }
 
+.sv-modal-quality.active {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .sv-modal-quality {
   width: 100%;
   color: white;
@@ -388,6 +441,10 @@ display: block;
   }
 }
 
+.url-link {
+  color: blue;
+}
+
 // :checked
 .sv-modal-quality {
   &-label {
@@ -399,11 +456,9 @@ display: block;
       max-height: 100vh;
       width: 100%;
       padding: 1em;
-      color: #000;
     }
 
     .sv-modal-quality-content div {
-      color: #000;
       line-height: 3vh;
       cursor: pointer;
     }
@@ -424,35 +479,41 @@ display: block;
 /* Responsive Design */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .sv-parent{
+  .sv-parent {
     flex-direction: column;
     padding: 7% 0 7% 0;
-    .sv-thumbnail{
+
+    .sv-thumbnail {
       width: 85%;
-      margin:0 auto;
-      height:fit-content;
+      margin: 0 auto;
+      height: fit-content;
     }
-    .sv-download-link{
+
+    .sv-download-link {
       width: 96%;
       padding: 3px;
       margin: 0 auto;
     }
-    .sv-detail{
+
+    .sv-detail {
       width: 96%;
-      margin:0 auto;
-      padding:3px;
+      margin: 0 auto;
+      padding: 3px;
       text-align: justify;
-      .sv-title{
-        font-weight:700;
+
+      .sv-title {
+        font-weight: 700;
       }
-      .sv-description{
-        padding:10px 10px 10px 0;
+
+      .sv-description {
+        padding: 10px 10px 10px 0;
         max-height: fit-content;
       }
     }
   }
 }
-.back-blur{
+
+.back-blur {
   //filter: blur(8px) grayscale(1);
   //-webkit-filter: blur(10px);
   width: 100%;
@@ -463,9 +524,10 @@ display: block;
   backdrop-filter: blur(8px);
   z-index: 1;
 }
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  .sv-download-link{
+  .sv-download-link {
     width: 27%;
     margin: 0 auto;
   }
@@ -473,8 +535,8 @@ display: block;
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  .sv-download-link{
-    width:19%;
+  .sv-download-link {
+    width: 19%;
   }
 }
 
@@ -483,4 +545,5 @@ display: block;
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+}
