--- a/src/assets/css/single_video.scss
+++ b/src/assets/css/single_video.scss
@@ -36,14 +36,19 @@
   display: inline-flex;
 }
 
-.sv-thumbnail-image {
+.sv-thumbnail-image-movie {
   display: block;
-  margin: 0 auto;
   width: 50%;
   height: auto;
   box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.68);
   position: relative;
   z-index: 1;
+  margin: 10px auto;
+}
+
+.sv-thumbnail-image {
+  width: 100%;
+  height: 100%;
 }
 
 .sv-video-duration {
@@ -57,6 +62,12 @@
 }
 
 .sv-thumbnail {
+  position: relative;
+  height: 30vh;
+  width: 50vh;
+}
+
+.sv-thumbnail-movie {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -178,7 +189,8 @@
   padding: 10px;
   cursor: pointer;
   width: 100%;
-  &:hover{
+
+  &:hover {
     background-color: #eee;
     -moz-transition: all .3s ease-out;
     -webkit-transition: all .3s ease-out;
@@ -449,7 +461,7 @@
 }
 
 .url-link {
- margin-left: 8px;
+  margin-left: 8px;
   color: #007bff;
 }
 
@@ -481,7 +493,8 @@
     .sv-modal-quality-content div.url-link:hover {
       text-decoration: underline;
     }
-   .sv-modal-quality-content div.url-section:hover {
+
+    .sv-modal-quality-content div.url-section:hover {
       text-decoration: underline;
     }
 
